--- a/hrms_project/accounts/templates/accounts/add_employee.html
+++ b/hrms_project/accounts/templates/accounts/add_employee.html
@@ -1,5 +1,5 @@
 <!-- templates/accounts/add_employee.html -->
-{% extends 'base.html' %}
+{% extends 'accounts/base.html' %}
 
 {% block content %}
 <h1>Add Employee</h1>
