--- a/hrms_project/accounts/templates/accounts/base.html
+++ b/hrms_project/accounts/templates/accounts/base.html
@@ -30,12 +30,13 @@
                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:admin_dashboard' %}"><i class="fas fa-home"></i> Dashboard</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:create_user' %}"><i class="fas fa-user-plus"></i> Create User</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:list_users' %}"><i class="fas fa-list"></i> List Users</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'accounts:add_employee' %}"><i class="fas fa-user-tie"></i> Add Employee</a></li>
+                           <!--  <li class="nav-item"><a class="nav-link" href="{% url 'accounts:add_employee' %}"><i class="fas fa-user-tie"></i> Add Employee</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:list_employees' %}"><i class="fas fa-list"></i> List Employees</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:approve_leaves' %}"><i class="fas fa-check-circle"></i> Approve Leaves</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:leave_reports' %}"><i class="fas fa-chart-bar"></i> Leave Reports</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:pending_kyc' %}"><i class="fas fa-clock"></i> Pending KYC</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'accounts:kyc_reports' %}"><i class="fas fa-file-alt"></i> KYC Reports</a></li>
+                            -->
                         </ul>
                     </div>
                 </nav>
